# demo-batbot

./: .gitignore  README.md
ws/: .gitignore
ws/src/batbot_description/: CMakeLists.txt  README.md  package.xml
ws/src/batbot_description/launch/: description.launch.py  display.launch.py
ws/src/batbot_description/rviz/: urdf.rviz
ws/src/batbot_description/src/: batbot_description.cpp
ws/src/batbot_description/urdf/batbot/: base.urdf.xacro  batbot.urdf.xacro  common_inertia.xacro
ws/src/batbot_description/urdf/batbot/actuator/: wheel.urdf.xacro
ws/src/batbot_description/urdf/batbot/material/: material.urdf.xacro
ws/src/batbot_description/urdf/batbot/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
ws/src/batbot_description/urdf/batbot/sensor/: imu.urdf.xacro
ws/src/batbot_sim/: CMakeLists.txt  README.md  package.xml
ws/src/batbot_sim/launch/: gz_sim.launch.py
ws/src/batbot_sim/models/parametric_ground/: model.config  model.sdf.erb
ws/src/batbot_sim/models/parametric_wall/: model.config  model.sdf.erb
ws/src/batbot_sim/scripts/: gen_world.sh
ws/src/batbot_sim/src/: batbot_sim.cpp
ws/src/batbot_sim/worlds/empty_room/: world.sdf.erb
ws/src/batbot_teleop/: CMakeLists.txt  README.md  package.xml
ws/src/batbot_teleop/launch/: joy_teleop.launch.py
ws/src/batbot_teleop/src/: joy_teleop.cpp  keyboard_teleop.cpp
